use File.setWritable if run under java 6